--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -2,9 +2,9 @@
 #wall .tag-1 {
   display:none;
 }
-#wall .tag-2 {
+#wall #tag-2 {
   display:none;
 }
-#wall .tag-3 {
+#wall #tag-3 {
   display:none;
 }
