--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -8,6 +8,6 @@ div#wall #tag-2 {
 body div#wall #tag-3.slick {
   display:none;
 }
-div.parent #tag-5 {
+div#wall .parent #tag-5 {
   display:none;
 }
