--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,6 +11,9 @@ body div#wall #tag-3.slick {
 div#wall .parent #tag-4 {
   display:none;
 }
+body div#wall .parent #tag-5.slick {
+  display:none;
+}
 body div#wall div.parent div:last-child div#tag-6 {
   display:none;
 }
